--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ body {
 }
 
 .hero p {
-  font-size: 12px;
+  font-size: 14px;
   letter-spacing: 0.3em;
   text-transform: uppercase;
   color: var(--light-gray);
@@ -289,6 +289,25 @@ button {
   z-index: 1;
 }
 
+/* Images */
+.corner-image {
+  position: absolute;
+  width: 180px;
+  opacity: 0.10;
+  z-index: 0;
+  pointer-events: none;
+}
+
+.corner-image.left {
+  left: 100px;
+  top: 60px;
+}
+
+.corner-image.right {
+  right: 100px;
+  top: 40px;
+}
+
 
 
 @media (max-width: 768px) {
@@ -332,7 +351,7 @@ button {
 
   .cards-section {
     margin-top: 0px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 
   .cards {
@@ -346,7 +365,19 @@ button {
 
   /* FOOTER */
   .footer {
-    margin-top: 12px;
+    margin-top: 0px;
     font-size: 0.9rem;
   }
+
+  .corner-image.left {
+    width: 90px;
+  left: 10px;
+  top: 50px;
+}
+
+.corner-image.right {
+  width: 90px;
+  right: 10px;
+  top: 40px;
+}
 }
